--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 iframe {
   border: 1px solid black;
-  width: 100%; /* takes precedence over the width set with the HTML width attribute */
+  width: 100%; 
   min-height: 500px;
 }
